--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <div class="introduce-section-child-1">
                 <h3 style="margin: 0; color: #37403d;">Hello There !.</h3>
                 <h3 class="hi-nur-islam"> This is me <span class="Nur">Nur Islam !</span></h3>
-                <h1 class="introduce-names">I am a Professional <span class="name-animation">Web Developer.</span></h1>
+                <h1 class="introduce-names">I am a Professional
+                    <span class="name-animation">Web Developer..</span>
+                </h1>
                 <p style="text-align: justify; color: #37403d; font-size: 20px;">Lorem ipsum dolor sit amet consectetur
                     adipisicing elit. Nostrum pariatur enim fuga praesentium
                     commodi quae odio eligendi. Esse animi error consectetur soluta quaerat. Eum fuga suscipit tempora
@@ -78,11 +80,72 @@
 
     <!-- main section  -->
     <main>
-
+        <div class="service-what-i-d0">
+            <h1 class="services">SERVICES</h1>
+            <img class="what-i-do" src="images/What-I-Do.png" alt="">
+        </div>
+        <div id="all-services-parent">
+            <div class="service-type">
+                <img src="images/ui-design.jpeg" alt="">
+                <div>
+                    <h2 class="services-title">UI/UX DESIGN</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, vel possimus. Autem voluptatibus
+                        molestias veritatis consequuntur sed eos eum vitae necessitatibus iure. Amet dolore corrupti
+                        ratione vero sint. Vero, nisi?</p>
+                </div>
+            </div>
+            <div class="service-type">
+                <img src="images/desktop.png" alt="">
+                <div>
+                    <h2 class="services-title">WEB DEVELOPMENT</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, deserunt dicta. At itaque, facere
+                        odit quas harum iste. Pariatur accusamus porro assumenda temporibus delectus odio
+                        necessitatibus, ea dicta id voluptas!</p>
+                </div>
+            </div>
+            <div class="service-type">
+                <img src="images/rongtuli.jpeg" alt="">
+                <div>
+                    <h2 class="services-title">GRAPHICH DESIGN</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed unde laudantium distinctio maxime ex
+                        tenetur fugiat quia et eius consectetur veniam officiis neque iure, vitae, ad natus minima
+                        laborum velit!</p>
+                </div>
+            </div>
+            <div class="service-type">
+                <img src="images/business-anilyst.png" alt="">
+                <div>
+                    <h2 class="services-title">BUSINESS ANALYST</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure labore ipsum animi impedit delectus
+                        a maiores, fugiat maxime dignissimos beatae iusto, quia totam officia corporis consequatur vero
+                        voluptatibus soluta voluptatem.</p>
+                </div>
+            </div>
+            <div class="service-type">
+                <img src="images/microsoft].png" alt="">
+                <div>
+                    <h2 class="services-title">MICROSOFT EXPART</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, distinctio. Blanditiis officia
+                        at harum labore, atque praesentium eum. Debitis repellendus amet veniam dolorum rem voluptate
+                        commodi, in culpa placeat tempore!</p>
+                </div>
+            </div>
+            <div class="service-type">
+                <img src="images/business-card.jpeg" alt="">
+                <div>
+                    <h2 class="services-title">BUSINESS CARD DESIGN</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sapiente nemo, repellat, culpa hic
+                        quasi dicta, quod dignissimos officia dolorem rem debitis illo totam. Accusamus pariatur
+                        voluptas odit nihil hic?</p>
+                </div>
+            </div>
+        </div>
     </main>
 
 
 
+
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
 </body>
 
 </html>
