education-experience section added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div id="clients-happy-experience">
             <div>
-                <h2>4+</h2>
+                <h2 class="education-expericence-title">4+</h2>
                 <p>Years <br> of Experience</p>
             </div>
             <div>
@@ -141,6 +141,58 @@
             </div>
         </div>
     </main>
+
+    <!-- My Skill & Experience -->
+    <section>
+        <div class="service-what-i-d0">
+            <h1 class="services">RESUME</h1>
+            <img class="what-i-do" src="images/SUMMARY.png" alt="">
+        </div>
+        <div id="Education-Experience">
+            <div>
+                <h1 class="my-education-experience">My Education</h1>
+                <div>
+                    <button class="button-education-experience">2018-2022</button>
+                    <h2 class="education-expericence-title">Bachelor of Computer Science</h2>
+                    <h4 class="education-experience-tag">Dhaka University of Enginerring and Technology</h4>
+                    <p class="education-experience-information">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsam repellendus laudantium magnam cupiditate molestias unde quo asperiores necessitatibus, praesentium, veniam quasi harum dicta ab eligendi nulla eos impedit nam?</p>
+                </div>
+                <div>
+                    <button class="button-education-experience">2014-2018</button>
+                    <h2 class="education-expericence-title">Diploma in Computer Science</h2>
+                    <h4 class="education-experience-tag">Pabna Polytechnic Institute</h4> 
+                    <p class="education-experience-information">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque error rerum illo ad dignissimos eveniet provident repellendus illum rem, odit quidem sed, itaque est aliquid alias a! Et, nesciunt porro!</p>
+                </div>
+                <div>
+                    <button class="button-education-experience">2012-2014</button>
+                    <h2 class="education-expericence-title">Secondary School Certificate</h2>
+                    <h4 class="education-experience-tag">Holy International High School</h4>
+                    <p class="education-experience-information">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime beatae earum asperiores sit, quas culpa deserunt obcaecati illum ab ratione, velit, laudantium amet sed dolorem debitis molestiae in aliquid eligendi.</p>
+                </div>
+            </div>
+            <div>
+                <h1 class="my-education-experience">My Experience</h1>
+                <div>
+                    <button class="button-education-experience">2022-Present</button>
+                    <h2 class="education-expericence-title">Skill Grouth Computer Training Institute</h2>
+                    <h4 class="education-experience-tag">Sinior Web Designer</h4>
+                    <p class="education-experience-information">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui deserunt obcaecati sapiente temporibus consectetur ratione omnis eaque. Exercitationem nesciunt expedita natus veniam doloribus dignissimos voluptatibus, aliquid numquam consequatur unde nostrum!</p>
+                </div>
+                <div>
+                    <button class="button-education-experience">2021-2023</button>
+                    <h2 class="education-expericence-title">Galaxy Computer Training Center</h2>
+                    <h4 class="education-experience-tag">Junior Web Designer</h4>
+                    <p class="education-experience-information">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur tenetur, assumenda, deserunt optio accusantium ratione harum excepturi dolores placeat at perferendis corrupti voluptas, molestiae velit. Maiores ex culpa aperiam non.</p>
+                </div>
+                <div>
+                    <button class="button-education-experience">2020-2021</button>
+                    <h2 class="education-expericence-title">Rainbow International High School</h2>
+                    <h4 class="education-experience-tag">Physics & English Teacher</h4>
+                    <p class="education-experience-information">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis velit molestias consequatur doloribus odio consequuntur maiores. Modi fugiat dicta ipsa vitae ducimus, nostrum, in tempora provident reiciendis molestiae accusantium at?</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
