client review and footer section added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
             <div class="navber-logo"><img src="images/main-logo-PNG.png" alt=""></div>
             <div class="nav-child-2">
-                <h3><a href="#">Home</a></h3>
+                <h3 class="skill-title"><a href="#">Home</a></h3>
                 <h3><a href="#">Services</a></h3>
                 <h3><a href="#">Portfolio</a></h3>
                 <h3><a href="#">Contact</a></h3>
@@ -94,10 +94,10 @@
                         ratione vero sint. Vero, nisi?</p>
                 </div>
             </div>
-            <div class="service-type">
+            <div style="opacity: 100%;" class="service-type">
                 <img src="images/desktop.png" alt="">
                 <div>
-                    <h2 class="services-title">WEB DEVELOPMENT</h2>
+                    <h2 style="color: #FFD43B; opacity: 80%;" class="services-title">WEB DEVELOPMENT</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, deserunt dicta. At itaque, facere
                         odit quas harum iste. Pariatur accusamus porro assumenda temporibus delectus odio
                         necessitatibus, ea dicta id voluptas!</p>
@@ -142,7 +142,7 @@
         </div>
     </main>
 
-    <!-- My Skill & Experience -->
+    <!-- My Education & Experience -->
     <section>
         <div class="service-what-i-d0">
             <h1 class="services">RESUME</h1>
@@ -155,19 +155,25 @@
                     <button class="button-education-experience">2018-2022</button>
                     <h2 class="education-expericence-title">Bachelor of Computer Science</h2>
                     <h4 class="education-experience-tag">Dhaka University of Enginerring and Technology</h4>
-                    <p class="education-experience-information">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsam repellendus laudantium magnam cupiditate molestias unde quo asperiores necessitatibus, praesentium, veniam quasi harum dicta ab eligendi nulla eos impedit nam?</p>
+                    <p class="education-experience-information">Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Ducimus ipsam repellendus laudantium magnam cupiditate molestias unde quo asperiores
+                        necessitatibus, praesentium, veniam quasi harum dicta ab eligendi nulla eos impedit nam?</p>
                 </div>
                 <div>
                     <button class="button-education-experience">2014-2018</button>
                     <h2 class="education-expericence-title">Diploma in Computer Science</h2>
-                    <h4 class="education-experience-tag">Pabna Polytechnic Institute</h4> 
-                    <p class="education-experience-information">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque error rerum illo ad dignissimos eveniet provident repellendus illum rem, odit quidem sed, itaque est aliquid alias a! Et, nesciunt porro!</p>
+                    <h4 class="education-experience-tag">Pabna Polytechnic Institute</h4>
+                    <p class="education-experience-information">Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Neque error rerum illo ad dignissimos eveniet provident repellendus illum rem, odit quidem
+                        sed, itaque est aliquid alias a! Et, nesciunt porro!</p>
                 </div>
                 <div>
                     <button class="button-education-experience">2012-2014</button>
                     <h2 class="education-expericence-title">Secondary School Certificate</h2>
                     <h4 class="education-experience-tag">Holy International High School</h4>
-                    <p class="education-experience-information">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime beatae earum asperiores sit, quas culpa deserunt obcaecati illum ab ratione, velit, laudantium amet sed dolorem debitis molestiae in aliquid eligendi.</p>
+                    <p class="education-experience-information">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Maxime beatae earum asperiores sit, quas culpa deserunt obcaecati illum ab ratione, velit,
+                        laudantium amet sed dolorem debitis molestiae in aliquid eligendi.</p>
                 </div>
             </div>
             <div>
@@ -176,24 +182,173 @@
                     <button class="button-education-experience">2022-Present</button>
                     <h2 class="education-expericence-title">Skill Grouth Computer Training Institute</h2>
                     <h4 class="education-experience-tag">Sinior Web Designer</h4>
-                    <p class="education-experience-information">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui deserunt obcaecati sapiente temporibus consectetur ratione omnis eaque. Exercitationem nesciunt expedita natus veniam doloribus dignissimos voluptatibus, aliquid numquam consequatur unde nostrum!</p>
+                    <p class="education-experience-information">Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Qui deserunt obcaecati sapiente temporibus consectetur ratione omnis eaque. Exercitationem
+                        nesciunt expedita natus veniam doloribus dignissimos voluptatibus, aliquid numquam consequatur
+                        unde nostrum!</p>
                 </div>
                 <div>
                     <button class="button-education-experience">2021-2023</button>
                     <h2 class="education-expericence-title">Galaxy Computer Training Center</h2>
                     <h4 class="education-experience-tag">Junior Web Designer</h4>
-                    <p class="education-experience-information">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur tenetur, assumenda, deserunt optio accusantium ratione harum excepturi dolores placeat at perferendis corrupti voluptas, molestiae velit. Maiores ex culpa aperiam non.</p>
+                    <p class="education-experience-information">Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit. Consequatur tenetur, assumenda, deserunt optio accusantium ratione harum excepturi dolores
+                        placeat at perferendis corrupti voluptas, molestiae velit. Maiores ex culpa aperiam non.</p>
                 </div>
                 <div>
                     <button class="button-education-experience">2020-2021</button>
                     <h2 class="education-expericence-title">Rainbow International High School</h2>
                     <h4 class="education-experience-tag">Physics & English Teacher</h4>
-                    <p class="education-experience-information">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis velit molestias consequatur doloribus odio consequuntur maiores. Modi fugiat dicta ipsa vitae ducimus, nostrum, in tempora provident reiciendis molestiae accusantium at?</p>
+                    <p class="education-experience-information">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Facilis velit molestias consequatur doloribus odio consequuntur maiores. Modi fugiat dicta ipsa
+                        vitae ducimus, nostrum, in tempora provident reiciendis molestiae accusantium at?</p>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- My Skills -->
+    <section>
+        <div class="service-what-i-d0">
+            <h1 class="services">MY SKILLS</h1>
+            <img class="what-i-do" src="images/MY-SKILLS.png" alt="">
+        </div>
+        <div>
+            <div class="skills-section">
+                <h3 class="skill-title">HTML</h3>
+                <div class="skill-div">
+                    <h4 class="skill-div-parcent">95%</h4>
+                    <img class="skill-image" src="images/95.png" alt="">
+                </div>
+            </div>
+            <div class="skills-section">
+                <h3 class="skill-title">CSS</h3>
+                <div class="skill-div">
+                    <h4 class="skill-div-parcent">90%</h4>
+                    <img class="skill-image" src="images/90.png" alt="">
+                </div>
+            </div>
+            <div class="skills-section">
+                <h3 class="skill-title">JAVASCRIPT</h3>
+                <div class="skill-div">
+                    <h4 class="skill-div-parcent">85%</h4>
+                    <img class="skill-image" src="images/85.png" alt="">
+                </div>
+            </div>
+            <div class="skills-section">
+                <h3 class="skill-title">REACT JS</h3>
+                <div class="skill-div">
+                    <h4 class="skill-div-parcent">80%</h4>
+                    <img class="skill-image" src="images/80.png" alt="">
+                </div>
+            </div>
+            <div class="skills-section">
+                <h3 class="skill-title">Adobe Illustrator</h3>
+                <div class="skill-div">
+                    <h4 class="skill-div-parcent">95%</h4>
+                    <img class="skill-image" src="images/95.png" alt="">
+                </div>
+            </div>
+            <div class="skills-section">
+                <h3 class="skill-title">Adobe Photoshop</h3>
+                <div class="skill-div">
+                    <h4 class="skill-div-parcent">85%</h4>
+                    <img class="skill-image" src="images/85.png" alt="">
+                </div>
+            </div>
+            <div class="skills-section">
+                <h3 class="skill-title">Microsoft Exaprt</h3>
+                <div class="skill-div">
+                    <h4 class="skill-div-parcent">95%</h4>
+                    <img class="skill-image" src="images/95.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Client Review -->
+    <section>
+        <div class="service-what-i-d0">
+            <h1 class="services">REVIEW</h1>
+            <img class="what-i-do" src="images/CLIENT-SPEAK.png" alt="">
+        </div>
+        <div id="client-review-parent">
+            <div>
+                <div class="client-upper">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ipsam necessitatibus ex hic
+                        qui repellat delectus quia possimus illo, et tempore veniam vero eos, at optio est dolorem
+                        assumenda error.</p>
+                    <img src="images/question-mark.png" alt="">
+                    <div class="client-review-box"></div>
+                </div>
+                <div class="client-review-down">
+                    <img src="images/client-review1.png" alt="">
+                    <h4>Edward Devais</h4>
+                    <p>Executive Officer</p>
+                </div>
+            </div>
+            <div>
+                <div class="client-upper">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ipsam necessitatibus ex hic
+                        qui repellat delectus quia possimus illo, et tempore veniam vero eos, at optio est dolorem
+                        assumenda error.</p>
+                    <img src="images/question-mark.png" alt="">
+                    <div class="client-review-box"></div>
+                </div>
+                <div class="client-review-down">
+                    <img src="images/client-review4.png" alt="">
+                    <h4>Cleara Alia</h4>
+                    <p>Maneging Director</p>
+                </div>
+            </div>
+            <div>
+                <div class="client-upper">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ipsam necessitatibus ex hic
+                        qui repellat delectus quia possimus illo, et tempore veniam vero eos, at optio est dolorem
+                        assumenda error.</p>
+                    <img src="images/question-mark.png" alt="">
+                    <div class="client-review-box"></div>
+                </div>
+                <div class="client-review-down">
+                    <img src="images/client-review5.png" alt="">
+                    <h4>Thomas Slelvi</h4>
+                    <p>Staf Member</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <div>
+            <h4>OFFICE ADDRESS</h4>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, error impedit deserunt iure perspiciatis aspernatur debitis minus sequi, dolore aperiam pariatur assumenda ipsum. Voluptate doloremque harum, distinctio quae tempore corporis.
+            </p>
+        </div>
+        <div>
+            <h4>USEFULL LINK</h4>
+            <p>Blog</p>
+            <p>Success</p>
+            <p>About us</p>
+            <p>Refund policy</p>
+            <p>Terms and Conditions</p>
+            <p>Privacy & App Privacy Policy</p>
+        </div>
+        <div>
+            <h4>FOLLOW US</h4>
+            <img src="images/twitter.png" alt="">
+            <img src="images/linkedin.png" alt="">
+            <img src="images/github.png" alt="">
+            <img src="images/facebook.png" alt="">
+            <h4>DOWNLOAD APP</h4>
+            <img style="border-radius: 0px; border: none;" src="images/GooglePlay.webp" alt="">
+            <img style="border-radius: 0px; border: none;" src="images/appStore.webp" alt="">
+        </div>
+    </footer>
+    <div style="margin: 0;">
+        <p style="padding: 20px; text-align: center; color: #545432; background-color: #252d2d; margin: 0; font-family: sans-serif; font-size: 11px; font-weight: 900;">@Copyright 2024 All Right Reserve</p>
+    </div>
 
 
 
