all right reserve

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </nav>
         <div id="introduce-section">
             <div class="introduce-section-child-1">
-                <h3 style="margin: 0; color: #37403d;">Hello There !.</h3>
-                <h3 class="hi-nur-islam"> This is me <span class="Nur">Nur Islam !</span></h3>
+                <h3 style="margin: 0; color: #37403d;">Hello!</h3>
+                <h3 class="hi-nur-islam"> This is me <span class="Nur">Nur Islam.</span></h3>
                 <h1 class="introduce-names">I am a Professional
                     <span class="name-animation">Web Developer..</span>
                 </h1>
@@ -326,7 +326,7 @@
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, error impedit deserunt iure perspiciatis aspernatur debitis minus sequi, dolore aperiam pariatur assumenda ipsum. Voluptate doloremque harum, distinctio quae tempore corporis.
             </p>
         </div>
-        <div>
+        <div id="footer-usefull-link">
             <h4>USEFULL LINK</h4>
             <p>Blog</p>
             <p>Success</p>
