--- a/index.html
+++ b/index.html
@@ -323,17 +323,17 @@
         <div>
             <h4>OFFICE ADDRESS</h4>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, error impedit deserunt iure perspiciatis aspernatur debitis minus sequi, dolore aperiam pariatur assumenda ipsum. Voluptate doloremque harum, distinctio quae tempore corporis.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, error impedit deserunt iure perspiciatis
+                aspernatur debitis minus sequi, dolore aperiam pariatur assumenda ipsum. Voluptate doloremque harum,
+                distinctio quae tempore corporis.
             </p>
         </div>
         <div id="footer-usefull-link">
             <h4>USEFULL LINK</h4>
-            <p>Blog</p>
-            <p>Success</p>
-            <p>About us</p>
-            <p>Refund policy</p>
-            <p>Terms and Conditions</p>
-            <p>Privacy & App Privacy Policy</p>
+            <h4><small><a href="#">Blog</a></small></h4>
+            <h4><small><a href="#">About us</a></small></h4>
+            <h4><small><a href="#">Terms and Conditions</a></small></h4>
+            <h4><small><a href="#">Privacy & App Privacy Policy</a></small></h4>
         </div>
         <div>
             <h4>FOLLOW US</h4>
@@ -347,7 +347,9 @@
         </div>
     </footer>
     <div style="margin: 0;">
-        <p style="padding: 20px; text-align: center; color: #545432; background-color: #252d2d; margin: 0; font-family: sans-serif; font-size: 11px; font-weight: 900;">@Copyright 2024 All Right Reserve</p>
+        <p
+            style="padding: 20px; text-align: center; color: #545432; background-color: #252d2d; margin: 0; font-family: sans-serif; font-size: 11px; font-weight: 900;">
+            @Copyright 2024 All Right Reserve</p>
     </div>
 
 
