services,resume,contact section added

--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nur Islam Portfolio</title>
+    <title>Resume</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -18,130 +18,19 @@
 
 <body>
 
-    <!-- header section  -->
-    <header>
-        <nav>
-            <div class="navber-logo"><img src="images/main-logo-PNG.png" alt=""></div>
-            <div class="nav-child-2">
-                <h3 class="skill-title"><a href="index.html">Home</a></h3>
-                <h3><a href="services.html">Services</a></h3>
-                <h3><a href="resume.html">Portfolio</a></h3>
-                <h3><a href="contact.html">Contact</a></h3>
-                <button class="custom-button"><a href="#">Hire Me</a></button>
-            </div>
-        </nav>
+    <!-- navber section -->
+    <nav>
+        <div class="navber-logo"><img src="images/main-logo-PNG.png" alt=""></div>
+        <div class="nav-child-2">
+            <h3 class="skill-title"><a href="index.html">Home</a></h3>
+            <h3><a href="services.html">Services</a></h3>
+            <h3><a href="resume.html">Portfolio</a></h3>
+            <h3><a href="contact.html">Contact</a></h3>
+            <button class="custom-button"><a href="#">Hire Me</a></button>
+        </div>
+    </nav>
 
-        <div id="introduce-section">
-            <div class="introduce-section-child-1">
-                <h3 style="margin: 0; color: #37403d;">Hello!</h3>
-                <h3 class="hi-nur-islam"> This is me <span class="Nur">Nur Islam.</span></h3>
-                <h1 class="introduce-names">I am a Professional
-                    <span class="name-animation">Web Developer..</span>
-                </h1>
-                <p style="text-align: justify; color: #37403d; font-size: 20px;">Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Nostrum pariatur enim fuga praesentium
-                    commodi quae odio eligendi. Esse animi error consectetur soluta quaerat. Eum fuga suscipit tempora
-                    possimus, ratione modi facere doloribus rerum? Labore ex sint esse quis vel quidem. Distinctio
-                    consequuntur vitae iusto, debitis similique mollitia blanditiis cupiditate veritatis. Labore ex sint
-                    esse quis vel quidem. Distinctio consequuntur vitae iusto, debitis similique mollitia blanditiis
-                    cupiditate veritatis.</p>
-                <button class="custom-button">
-                    Download CV <i class="fa-solid fa-download" style="color: #FFD43B;"></i>
-                </button>
-            </div>
-            <div class="introduce-section-child-2">
-                <img src="images/portfolio-img.png" alt="">
-                <div id="icon-image">
-                    <img src="images/twitter.png" alt="">
-                    <img src="images/linkedin.png" alt="">
-                    <img src="images/github.png" alt="">
-                    <img src="images/facebook.png" alt="">
-                </div>
-            </div>
-        </div>
-        <div id="clients-happy-experience">
-            <div>
-                <h2 class="education-expericence-title">4+</h2>
-                <p>Years <br> of Experience</p>
-            </div>
-            <div>
-                <h2>50+</h2>
-                <p>Project <br> Completed</p>
-            </div>
-            <div>
-                <h2>1.1K</h2>
-                <p>Happy <br> Client Says</p>
-            </div>
-            <div>
-                <h2>08</h2>
-                <p>Get <br> Awards</p>
-            </div>
-        </div>
-    </header>
 
-    <!-- main section  -->
-    <main>
-        <div class="service-what-i-d0">
-            <h1 class="services">SERVICES</h1>
-            <img class="what-i-do" src="images/What-I-Do.png" alt="">
-        </div>
-        <div id="all-services-parent">
-            <div class="service-type">
-                <img src="images/ui-design.jpeg" alt="">
-                <div>
-                    <h2 class="services-title">UI/UX DESIGN</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, vel possimus. Autem voluptatibus
-                        molestias veritatis consequuntur sed eos eum vitae necessitatibus iure. Amet dolore corrupti
-                        ratione vero sint. Vero, nisi?</p>
-                </div>
-            </div>
-            <div style="opacity: 100%;" class="service-type">
-                <img src="images/desktop.png" alt="">
-                <div>
-                    <h2 style="color: #FFD43B; opacity: 80%;" class="services-title">WEB DEVELOPMENT</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, deserunt dicta. At itaque, facere
-                        odit quas harum iste. Pariatur accusamus porro assumenda temporibus delectus odio
-                        necessitatibus, ea dicta id voluptas!</p>
-                </div>
-            </div>
-            <div class="service-type">
-                <img src="images/rongtuli.jpeg" alt="">
-                <div>
-                    <h2 class="services-title">GRAPHICH DESIGN</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed unde laudantium distinctio maxime ex
-                        tenetur fugiat quia et eius consectetur veniam officiis neque iure, vitae, ad natus minima
-                        laborum velit!</p>
-                </div>
-            </div>
-            <div class="service-type">
-                <img src="images/business-anilyst.png" alt="">
-                <div>
-                    <h2 class="services-title">BUSINESS ANALYST</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure labore ipsum animi impedit delectus
-                        a maiores, fugiat maxime dignissimos beatae iusto, quia totam officia corporis consequatur vero
-                        voluptatibus soluta voluptatem.</p>
-                </div>
-            </div>
-            <div class="service-type">
-                <img src="images/microsoft].png" alt="">
-                <div>
-                    <h2 class="services-title">MICROSOFT EXPART</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, distinctio. Blanditiis officia
-                        at harum labore, atque praesentium eum. Debitis repellendus amet veniam dolorum rem voluptate
-                        commodi, in culpa placeat tempore!</p>
-                </div>
-            </div>
-            <div class="service-type">
-                <img src="images/business-card.jpeg" alt="">
-                <div>
-                    <h2 class="services-title">BUSINESS CARD DESIGN</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sapiente nemo, repellat, culpa hic
-                        quasi dicta, quod dignissimos officia dolorem rem debitis illo totam. Accusamus pariatur
-                        voluptas odit nihil hic?</p>
-                </div>
-            </div>
-        </div>
-    </main>
 
     <!-- My Education & Experience -->
     <section>
@@ -267,57 +156,7 @@
         </div>
     </section>
 
-    <!-- Client Review -->
-    <section>
-        <div class="service-what-i-d0">
-            <h1 class="services">REVIEW</h1>
-            <img class="what-i-do" src="images/CLIENT-SPEAK.png" alt="">
-        </div>
-        <div id="client-review-parent">
-            <div>
-                <div class="client-upper">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ipsam necessitatibus ex hic
-                        qui repellat delectus quia possimus illo, et tempore veniam vero eos, at optio est dolorem
-                        assumenda error.</p>
-                    <img src="images/question-mark.png" alt="">
-                    <div class="client-review-box"></div>
-                </div>
-                <div class="client-review-down">
-                    <img src="images/client-review1.png" alt="">
-                    <h4>Edward Devais</h4>
-                    <p>Executive Officer</p>
-                </div>
-            </div>
-            <div>
-                <div class="client-upper">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ipsam necessitatibus ex hic
-                        qui repellat delectus quia possimus illo, et tempore veniam vero eos, at optio est dolorem
-                        assumenda error.</p>
-                    <img src="images/question-mark.png" alt="">
-                    <div class="client-review-box"></div>
-                </div>
-                <div class="client-review-down">
-                    <img src="images/client-review4.png" alt="">
-                    <h4>Cleara Alia</h4>
-                    <p>Maneging Director</p>
-                </div>
-            </div>
-            <div>
-                <div class="client-upper">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ipsam necessitatibus ex hic
-                        qui repellat delectus quia possimus illo, et tempore veniam vero eos, at optio est dolorem
-                        assumenda error.</p>
-                    <img src="images/question-mark.png" alt="">
-                    <div class="client-review-box"></div>
-                </div>
-                <div class="client-review-down">
-                    <img src="images/client-review5.png" alt="">
-                    <h4>Thomas Slelvi</h4>
-                    <p>Staf Member</p>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
     <!-- Footer Section -->
     <footer>
@@ -355,10 +194,6 @@
 
 
 
-
-
-
-    <script src="https://cdn.lordicon.com/lordicon.js"></script>
 </body>
 
 </html>
