contact section added

--- a/index.html
+++ b/index.html
@@ -319,6 +319,36 @@
         </div>
     </section>
 
+    <!-- Contact Section -->
+    <section>
+        <div class="service-what-i-d0">
+            <h1 class="services">CONTACT</h1>
+            <img class="what-i-do" src="images/CONTACT.png" alt="">
+        </div>
+        <div id="contact-section-parent">
+            <div>
+                <form>
+                    <label>FULL NAME</label>
+                    <input type="text" placeholder="enter your name" required>
+                    <label>E-mail</label>
+                    <input type="email" placeholder="enter email">
+                    <label>Contact Number</label>
+                    <input type="number" placeholder="+880" required>
+                    <label>Massage Drop Date</label>
+                    <input type="datetime-local">
+                    <label>What For Massage?</label>
+                    <textarea cols="50" rows="10" placeholder="say the reason" required>Actually,</textarea>
+                    <div id="submit-button"><button>Submit</button></div>
+
+                </form>
+            </div>
+            <div>
+                <h2 class="contact-right-side">Drop a Massage <br> <span>for Me !!</span></h2>
+                <img class="contact-right-image" src="images/drop-massage-for-me.jpeg" alt="">
+            </div>
+        </div>
+    </section>
+
     <!-- Footer Section -->
     <footer>
         <div>
