button submit type added

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     <input type="datetime-local">
                     <label>What For Massage?</label>
                     <textarea cols="50" rows="10" placeholder="say the reason" required>Actually,</textarea>
-                    <div id="submit-button"><button>Submit</button></div>
+                    <div id="submit-button"><button type="submit">Submit</button></div>
 
                 </form>
             </div>
