custom button design

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 <h3><a href="services.html">Services</a></h3>
                 <h3><a href="resume.html">Portfolio</a></h3>
                 <h3><a href="contact.html">Contact</a></h3>
-                <button class="custom-button"><a href="#">Hire Me</a></button>
+                <div id="submit-button"><button><a href="#">Hire Me</a></button></div>
+                <!-- <button class="custom-button"><a href="#"></a></button> -->
             </div>
         </nav>
 
@@ -45,17 +46,19 @@
                     consequuntur vitae iusto, debitis similique mollitia blanditiis cupiditate veritatis. Labore ex sint
                     esse quis vel quidem. Distinctio consequuntur vitae iusto, debitis similique mollitia blanditiis
                     cupiditate veritatis.</p>
-                <button class="custom-button">
-                    Download CV <i class="fa-solid fa-download" style="color: #FFD43B;"></i>
+                <button class="custom-button"><a
+                        href="https://drive.google.com/file/d/1b5N_Ewk_vkaHXwAc7ixSMfuJAWEUkQNk/view?usp=sharing" target="_blank">
+                        Download CV <i class="fa-solid fa-download" style="color: #FFD43B;"></i></a>
                 </button>
             </div>
             <div class="introduce-section-child-2">
                 <img src="images/portfolio-img.png" alt="">
                 <div id="icon-image">
-                    <img src="images/twitter.png" alt="">
-                    <img src="images/linkedin.png" alt="">
-                    <img src="images/github.png" alt="">
-                    <img src="images/facebook.png" alt="">
+                    <a href="#"><img src="images/twitter.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/nurislam21/"><img src="images/linkedin.png" alt=""></a>
+                    <a href="https://github.com/Parves21"><img src="images/github.png" alt=""></a>
+                    <a href="https://www.facebook.com/profile.php?id=100076573397242"><img src="images/facebook.png"
+                            alt=""></a>
                 </div>
             </div>
         </div>
