--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
         </div>
         <div id="clients-happy-experience">
             <div>
-                <h2 class="education-expericence-title">4+</h2>
+                <h2 class="num" data-value="5">00+<span>+</span></h2>
                 <p>Years <br> of Experience</p>
             </div>
             <div>
-                <h2>50+</h2>
+                <h2 class="num" data-value="200">00</h2>
                 <p>Project <br> Completed</p>
             </div>
             <div>
-                <h2>1.1K</h2>
+                <h2 class="num" data-value="1100">00<span>K</span></h2>
                 <p>Happy <br> Client Says</p>
             </div>
             <div>
-                <h2>08</h2>
+                <h2 class="num" data-value="80">00</h2>
                 <p>Get <br> Awards</p>
             </div>
         </div>
@@ -391,7 +391,7 @@
 
 
 
-    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
