nothing is addded

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- Happy Client Experience -->
         <div id="clients-happy-experience">
             <div>
                 <h2 class="num" data-value="5">00+<span>+</span></h2>
